<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newReminder_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".NewReminderActivity">

    <TextView
        android:id="@+id/addNew_textView"
        android:layout_width="175dp"
        android:layout_height="27dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@color/cardview_light_background"
        android:text="@string/addnew"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newtitle_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newtitle_textView"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="254dp"
        android:background="@color/colorAccent"
        android:text="@string/newtitle"
        android:textAlignment="viewStart"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newTitle_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNew_textView" />

    <EditText
        android:id="@+id/newTitle_editText"
        android:layout_width="230dp"
        android:layout_height="37dp"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="5dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newtime_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newtitle_textView" />

    <TextView
        android:id="@+id/newdetail_textView"
        android:layout_width="97dp"
        android:layout_height="25dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="219dp"
        android:background="@color/colorAccent"
        android:text="@string/newdetail"
        android:textAlignment="viewStart"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addNewDetail_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCategory_spinner" />

    <EditText
        android:id="@+id/addNewDetail_editText"
        android:layout_width="235dp"
        android:layout_height="95dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="150dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newdetail_textView" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="57dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/share_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewDetail_editText"
        app:layout_constraintVertical_bias="0.461" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="57dp"
        android:background="@color/colorAccent"
        android:text="@string/share"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        app:layout_constraintTop_toBottomOf="@+id/addNewDetail_editText"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/newtime_textView"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorAccent"
        android:text="@string/newtime"
        android:textAlignment="viewStart"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addNewTime_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTitle_editText" />

    <TextView
        android:id="@+id/addNewTime_editText"
        android:layout_width="232dp"
        android:layout_height="38dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="5dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:inputType="datetime"
        app:layout_constraintBottom_toTopOf="@+id/newcategory_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newtime_textView" />

    <TextView
        android:id="@+id/newcategory_textView"
        android:layout_width="93dp"
        android:layout_height="25dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="223dp"
        android:background="@color/colorAccent"
        android:text="@string/newcategory"
        android:textAlignment="viewStart"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addCategory_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewTime_editText" />

    <Spinner
        android:id="@+id/addCategory_spinner"
        android:layout_width="234dp"
        android:layout_height="39dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="5dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/newdetail_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newcategory_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>